# Blob/object storage.

load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "client",
    srcs = ["StorageClient.kt"],
    deps = [
        "//imports/java/com/google/protobuf",
        "//imports/kotlin/kotlinx/coroutines:core",
        "//src/main/kotlin/org/wfanet/measurement/common",
    ],
)

kt_jvm_library(
    name = "store",
    srcs = ["Store.kt"],
    deps = [
        ":client",
        "//imports/java/com/google/protobuf",
        "//imports/kotlin/kotlinx/coroutines:core",
        "//src/main/kotlin/org/wfanet/measurement/common",
    ],
)

kt_jvm_library(
    name = "mesos_recordio_storage_client",
    srcs = glob(["*.kt"]),
    deps = [
        "//imports/kotlin/kotlinx/coroutines:core",
        "//src/main/kotlin/org/wfanet/measurement/common",
        "//src/main/kotlin/org/wfanet/measurement/storage:store",
    ],
)

kt_jvm_library(
    name = "sharded_storage_client",
    srcs = ["ShardedStorageClient.kt"],
    deps = [
        ":mesos_recordio_storage_client",
        "//imports/kotlin/kotlinx/coroutines:core",
        "//src/main/kotlin/org/wfanet/measurement/common",
        "//src/main/kotlin/org/wfanet/measurement/storage:store",
    ],
)
