# Blob/object storage.

load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "client",
    srcs = ["StorageClient.kt"],
    deps = [
        "//imports/java/com/google/protobuf",
        "//imports/kotlin/kotlinx/coroutines:core",
        "//src/main/kotlin/org/wfanet/measurement/common",
    ],
)

kt_jvm_library(
    name = "store",
    srcs = ["Store.kt"],
    deps = [
        ":client",
        "//imports/java/com/google/protobuf",
        "//imports/kotlin/kotlinx/coroutines:core",
        "//src/main/kotlin/org/wfanet/measurement/common",
    ],
)

kt_jvm_library(
    name = "mesos_recordio_storage_client",
    srcs = ["MesosRecordIoStorageClient.kt"],
    deps = [
        "//imports/kotlin/kotlinx/coroutines:core",
        "//src/main/kotlin/org/wfanet/measurement/common",
        "//src/main/kotlin/org/wfanet/measurement/storage:store",
    ],
)

kt_jvm_library(
    name = "parquet_storage_client",
    srcs = ["ParquetStorageClient.kt"],
    deps = [
        ":client",
        "//imports/java/com/google/protobuf",
        # Required at RUNTIME by parquet-mr 1.14.x — Hadoop Configuration is
        # instantiated from inside ParquetReader.Builder constructors and
        # ParquetFileReader.open. Hadoop MapReduce client classes are also
        # touched (FileInputFormat referenced from ParquetReadOptions.Builder).
        "//imports/java/org/apache/hadoop:hadoop_client_api",
        "//imports/java/org/apache/hadoop:hadoop_client_runtime",
        "//imports/java/org/apache/parquet:parquet_column",
        "//imports/java/org/apache/parquet:parquet_common",
        "//imports/java/org/apache/parquet:parquet_hadoop",
        "//imports/kotlin/kotlinx/coroutines:core",
    ],
)

kt_jvm_library(
    name = "selected_storage_client",
    srcs = ["SelectedStorageClient.kt"],
    deps = [
        ":client",
        "//imports/java/com/google/protobuf",
        "//imports/kotlin/kotlinx/coroutines:core",
        "//src/main/kotlin/org/wfanet/measurement/common",
        "//src/main/kotlin/org/wfanet/measurement/gcloud/gcs",
        "//src/main/kotlin/org/wfanet/measurement/storage/filesystem:client",
    ],
)
