# Blob/object storage.

load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "client",
    srcs = ["StorageClient.kt"],
    deps = [
        "//imports/java/com/google/protobuf",
        "//imports/kotlin/kotlinx/coroutines:core",
        "//src/main/kotlin/org/wfanet/measurement/common",
    ],
)

kt_jvm_library(
    name = "store",
    srcs = ["Store.kt"],
    deps = [
        ":client",
        "//imports/java/com/google/protobuf",
        "//imports/kotlin/kotlinx/coroutines:core",
        "//src/main/kotlin/org/wfanet/measurement/common",
    ],
)

kt_jvm_library(
    name = "mesos_recordio_storage_client",
    srcs = ["MesosRecordIoStorageClient.kt"],
    deps = [
        "//imports/kotlin/kotlinx/coroutines:core",
        "//src/main/kotlin/org/wfanet/measurement/common",
        "//src/main/kotlin/org/wfanet/measurement/storage:store",
    ],
)

kt_jvm_library(
    name = "parquet_storage_client",
    srcs = ["ParquetKmsClientBridge.kt", "ParquetStorageClient.kt"],
    deps = [
        ":client",
        # Tink KmsClient bridged to parquet-mr key tools via ParquetEncryptionConfig.
        "//imports/java/com/google/crypto/tink",
        "//imports/java/com/google/protobuf",
        # Hadoop FileSystem + Configuration provide the storage backend that
        # parquet-mr reads/writes through (HadoopInputFile / HadoopOutputFile).
        # The shaded hadoop-client artifacts expose Hadoop's classes WITHOUT
        # leaking ~80 transitive deps onto the classpath — see the comment in
        # MODULE.bazel and imports/java/org/apache/hadoop/BUILD.bazel.
        "//imports/java/org/apache/hadoop:hadoop_client_api",
        "//imports/java/org/apache/hadoop:hadoop_client_runtime",
        "//imports/java/org/apache/parquet:parquet_column",
        "//imports/java/org/apache/parquet:parquet_common",
        "//imports/java/org/apache/parquet:parquet_format_structures",
        "//imports/java/org/apache/parquet:parquet_hadoop",
        # google.type.Date used by the ParquetRow/ParquetValue codec.
        "//imports/kotlin/com/google/type:date_kt_jvm_proto",
        "//imports/kotlin/kotlinx/coroutines:core",
        "//src/main/proto/wfa/measurement/storage:parquet_row_kt_jvm_proto",
    ],
    runtime_deps = [
        # GoogleHadoopFileSystem for gs:// blob keys in production. Runtime
        # only — selected via Configuration (fs.gs.impl), never compiled
        # against. Local-filesystem reads/writes (tests) need nothing here.
        "//imports/java/com/google/cloud/bigdataoss:gcs_connector",
    ],
)

kt_jvm_library(
    name = "selected_storage_client",
    srcs = ["SelectedStorageClient.kt"],
    deps = [
        ":client",
        "//imports/java/com/google/protobuf",
        "//imports/kotlin/kotlinx/coroutines:core",
        "//src/main/kotlin/org/wfanet/measurement/common",
        "//src/main/kotlin/org/wfanet/measurement/gcloud/gcs",
        "//src/main/kotlin/org/wfanet/measurement/storage/filesystem:client",
    ],
)
