load("@rules_proto//proto:defs.bzl", "proto_library")
load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_proto_library")

package(
    default_testonly = True,
    default_visibility = ["//visibility:public"],
)

IMPORT_PREFIX = "/src/main/proto"

proto_library(
    name = "simple_proto",
    srcs = ["simple.proto"],
    strip_import_prefix = IMPORT_PREFIX,
)

kt_jvm_proto_library(
    name = "simple_kt_jvm_proto",
    deps = [":simple_proto"],
)

proto_library(
    name = "depends_on_simple_proto",
    srcs = ["depends_on_simple.proto"],
    strip_import_prefix = IMPORT_PREFIX,
    deps = [
        ":simple_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

kt_jvm_proto_library(
    name = "depends_on_simple_kt_jvm_proto",
    deps = [":depends_on_simple_proto"],
)

proto_library(
    name = "contains_any_proto",
    srcs = ["contains_any.proto"],
    strip_import_prefix = IMPORT_PREFIX,
    deps = [
        "@com_google_protobuf//:any_proto",
    ],
)

kt_jvm_proto_library(
    name = "contains_any_kt_jvm_proto",
    deps = [":contains_any_proto"],
)
