load("@rules_proto//proto:defs.bzl", "proto_library")
load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_grpc_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "forwarded_storage_service_proto",
    srcs = ["forwarded_storage_service.proto"],
)

kt_jvm_grpc_proto_library(
    name = "forwarded_storage_service_kt_jvm_grpc_proto",
    deps = [":forwarded_storage_service_proto"],
)
