load("@rules_proto//proto:defs.bzl", "proto_library")
load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_proto_library")

package(
    default_testonly = True,
    default_visibility = ["//visibility:public"],
)

IMPORT_PREFIX = "/src/main/proto"

proto_library(
    name = "complex_message_proto",
    srcs = ["complex_message.proto"],
    strip_import_prefix = IMPORT_PREFIX,
)

kt_jvm_proto_library(
    name = "complex_message_kt_jvm_proto",
    deps = [":complex_message_proto"],
)
