load("//build/kt_jvm_proto:defs.bzl", "kt_jvm_proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(
    default_testonly = True,
    default_visibility = ["//visibility:public"],
)

proto_library(
    name = "simple_message_proto",
    srcs = ["simple_message.proto"],
    strip_import_prefix = "/src/main/proto",
)

java_proto_library(
    name = "simple_message_java_proto",
    deps = [":simple_message_proto"],
)

kt_jvm_proto_library(
    name = "simple_message_kt_jvm_proto",
    srcs = [":simple_message_proto"],
    deps = [":simple_message_java_proto"],
)
