load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "BytesTest",
    srcs = ["BytesTest.kt"],
    test_class = "org.wfanet.measurement.common.BytesTest",
    deps = [
        "//imports/java/com/google/common/truth",
        "//imports/java/com/google/protobuf",
        "//imports/java/org/junit",
        "//imports/kotlin/kotlin/test",
        "//imports/kotlin/kotlinx/coroutines:core",
        "//imports/kotlin/kotlinx/coroutines/test",
        "//src/main/kotlin/org/wfanet/measurement/common",
    ],
)

kt_jvm_test(
    name = "Base64Test",
    srcs = ["Base64Test.kt"],
    test_class = "org.wfanet.measurement.common.Base64Test",
    deps = [
        "//imports/java/com/google/common/truth",
        "//imports/java/com/google/protobuf",
        "//imports/java/org/junit",
        "//src/main/kotlin/org/wfanet/measurement/common",
    ],
)

kt_jvm_test(
    name = "ProtoUtilsTest",
    srcs = ["ProtoUtilsTest.kt"],
    test_class = "org.wfanet.measurement.common.ProtoUtilsTest",
    deps = [
        "//imports/java/com/google/common/truth",
        "//imports/java/com/google/common/truth/extensions/proto",
        "//imports/java/com/google/protobuf",
        "//imports/java/org/junit",
        "//imports/kotlin/kotlin/test",
        "//src/main/kotlin/org/wfanet/measurement/common",
        "//src/main/proto/wfa/measurement/testing:test_config_java_proto",
    ],
)

kt_jvm_test(
    name = "FlowKtTest",
    srcs = ["FlowKtTest.kt"],
    test_class = "org.wfanet.measurement.common.FlowKtTest",
    deps = [
        "//imports/java/com/google/common/truth",
        "//imports/java/org/junit",
        "//imports/kotlin/kotlin/test",
        "//imports/kotlin/kotlinx/coroutines:core",
        "//imports/kotlin/kotlinx/coroutines/test",
        "//src/main/kotlin/org/wfanet/measurement/common",
    ],
)

kt_jvm_test(
    name = "CountDownLatchTest",
    srcs = ["CountDownLatchTest.kt"],
    test_class = "org.wfanet.measurement.common.CountDownLatchTest",
    deps = [
        "//imports/java/com/google/common/truth",
        "//imports/java/org/junit",
        "//imports/kotlin/kotlin/test",
        "//imports/kotlin/kotlinx/coroutines:core",
        "//imports/kotlin/kotlinx/coroutines/test",
        "//src/main/kotlin/org/wfanet/measurement/common",
    ],
)

kt_jvm_test(
    name = "ResourceNameParserTest",
    srcs = ["ResourceNameParserTest.kt"],
    test_class = "org.wfanet.measurement.common.ResourceNameParserTest",
    deps = [
        "//imports/java/com/google/common/truth",
        "//imports/java/org/junit",
        "//imports/kotlin/kotlin/test",
        "//src/main/kotlin/org/wfanet/measurement/common",
    ],
)

kt_jvm_test(
    name = "DateUtilTest",
    srcs = ["DateUtilTest.kt"],
    test_class = "org.wfanet.measurement.common.DateUtilTest",
    deps = [
        "//imports/java/com/google/common/truth",
        "//imports/java/com/google/common/truth/extensions/proto",
        "//imports/java/com/google/protobuf",
        "//imports/java/org/junit",
        "//src/main/kotlin/org/wfanet/measurement/common",
        "@com_google_googleapis//google/type:type_java_proto",
    ],
)

kt_jvm_test(
    name = "LocalDateProgressionTest",
    srcs = ["LocalDateProgressionTest.kt"],
    test_class = "org.wfanet.measurement.common.LocalDateProgressionTest",
    deps = [
        "//imports/java/com/google/common/truth",
        "//imports/java/org/junit",
        "//src/main/kotlin/org/wfanet/measurement/common",
    ],
)

kt_jvm_test(
    name = "OpenEndTimeRangeTest",
    srcs = ["OpenEndTimeRangeTest.kt"],
    test_class = "org.wfanet.measurement.common.OpenEndTimeRangeTest",
    deps = [
        "//imports/java/com/google/common/truth",
        "//imports/java/org/junit",
        "//src/main/kotlin/org/wfanet/measurement/common",
    ],
)

kt_jvm_test(
    name = "ProtoReflectionTest",
    srcs = ["ProtoReflectionTest.kt"],
    test_class = "org.wfanet.measurement.common.ProtoReflectionTest",
    deps = [
        "//imports/java/com/google/common/truth",
        "//imports/java/com/google/common/truth/extensions/proto",
        "//imports/java/org/junit",
        "//src/main/kotlin/org/wfanet/measurement/common",
        "//src/main/proto/wfa/measurement/common/testing:depends_on_simple_kt_jvm_proto",
    ],
)
