load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")

package(
    default_testonly = True,
    default_visibility = ["//src/test:__subpackages__"],
)

kt_jvm_test(
    name = "AbstractQueueTest",
    srcs = ["AbstractQueueTest.kt"],
    local = True,
    test_class = "org.wfanet.measurement.queue.AbstractQueueTest",
    deps = [
        "//imports/java/com/google/common/truth",
        "//imports/java/org/junit",
        "//imports/kotlin/kotlin/test",
        "//src/main/kotlin/org/wfanet/measurement/gcloud/pubsub:publisher",
        "//src/main/kotlin/org/wfanet/measurement/gcloud/pubsub:subscriber",
        "//src/main/proto/wfa/measurement/queue/testing:test_work_kt_jvm_proto",
    ],
)
