load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "MesosRecordIoStorageClientTest",
    timeout = "short",
    srcs = ["MesosRecordIoStorageClientTest.kt"],
    test_class = "org.wfanet.measurement.storage.MesosRecordIoStorageClientTest",
    deps = [
        "//imports/java/com/google/common/truth",
        "//imports/java/org/junit",
        "//src/main/kotlin/org/wfanet/measurement/storage:mesos_recordio_storage_client",
        "//src/main/kotlin/org/wfanet/measurement/storage/testing",
        "//src/main/proto/wfa/measurement/storage/testing:complex_message_kt_jvm_proto",
    ],
)

kt_jvm_test(
    name = "SelectedStorageClientTest",
    srcs = ["SelectedStorageClientTest.kt"],
    test_class = "org.wfanet.measurement.storage.SelectedStorageClientTest",
    deps = [
        "//imports/java/com/google/common/truth",
        "//imports/java/org/junit",
        "//imports/kotlin/kotlin/test",
        "//src/main/kotlin/org/wfanet/measurement/gcloud/gcs",
        "//src/main/kotlin/org/wfanet/measurement/storage:selected_storage_client",
        "//src/main/kotlin/org/wfanet/measurement/storage/testing",
    ],
)

kt_jvm_test(
    name = "ParquetStorageClientTest",
    timeout = "short",
    srcs = ["ParquetStorageClientTest.kt"],
    test_class = "org.wfanet.measurement.storage.ParquetStorageClientTest",
    deps = [
        "//imports/java/com/google/common/truth",
        "//imports/java/com/google/crypto/tink",
        "//imports/java/com/google/protobuf",
        "//imports/java/org/apache/hadoop:hadoop_client_api",
        "//imports/java/org/apache/hadoop:hadoop_client_runtime",
        "//imports/java/org/apache/parquet:parquet_column",
        "//imports/java/org/apache/parquet:parquet_common",
        "//imports/java/org/apache/parquet:parquet_hadoop",
        "//imports/java/org/junit",
        "//imports/kotlin/com/google/type:date_kt_jvm_proto",
        "//imports/kotlin/kotlin/test",
        "//imports/kotlin/kotlinx/coroutines:core",
        "//src/main/kotlin/org/wfanet/measurement/common/crypto/tink/testing",
        "//src/main/kotlin/org/wfanet/measurement/storage:parquet_storage_client",
        "//src/main/proto/wfa/measurement/storage:parquet_row_kt_jvm_proto",
    ],
)

kt_jvm_test(
    name = "ParquetStorageClientEmulatorTest",
    srcs = ["ParquetStorageClientEmulatorTest.kt"],
    tags = [
        # Uses Docker (GCS storage-testbench emulator).
        "no-remote-exec",
    ],
    test_class = "org.wfanet.measurement.storage.ParquetStorageClientEmulatorTest",
    runtime_deps = [
        # GoogleHadoopFileSystem for the gs:// scheme at runtime.
        "//imports/java/com/google/cloud/bigdataoss:gcs_connector",
    ],
    deps = [
        "//imports/java/com/google/cloud/storage",
        "//imports/java/com/google/common/truth",
        "//imports/java/org/apache/hadoop:hadoop_client_api",
        "//imports/java/org/junit",
        "//imports/kotlin/kotlinx/coroutines:core",
        "//src/main/kotlin/org/wfanet/measurement/gcloud/gcs/testing:storage_emulator_rule",
        "//src/main/kotlin/org/wfanet/measurement/storage:parquet_storage_client",
        "//src/main/proto/wfa/measurement/storage:parquet_row_kt_jvm_proto",
    ],
)

kt_jvm_test(
    name = "ParquetKmsClientTest",
    timeout = "short",
    srcs = ["ParquetKmsClientTest.kt"],
    test_class = "org.wfanet.measurement.storage.ParquetKmsClientTest",
    runtime_deps = [
        "//imports/java/org/apache/hadoop:hadoop_client_runtime",
    ],
    deps = [
        "//imports/java/com/google/common/truth",
        "//imports/java/com/google/crypto/tink",
        "//imports/java/org/apache/hadoop:hadoop_client_api",
        "//imports/java/org/junit",
        "//imports/kotlin/kotlin/test",
        "//src/main/kotlin/org/wfanet/measurement/common/crypto/tink/testing",
        "//src/main/kotlin/org/wfanet/measurement/storage:parquet_storage_client",
    ],
)
