load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "region_converter",
    srcs = glob(["RegionConverter.kt"]),
    deps = [
        "//imports/java/picocli",
        "//imports/java/software/amazon/awssdk/services/regions",
    ],
)
