load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "region_converter",
    srcs = ["RegionConverter.kt"],
    deps = [
        "//imports/java/picocli",
        "//imports/java/software/amazon/awssdk/services/regions",
    ],
)
