load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "aws_kms_client_factory",
    srcs = ["AwsKmsClientFactory.kt"],
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/common/crypto/tink",
        "@maven//:com_google_crypto_tink_tink_awskms",
        "@maven//:software_amazon_awssdk_regions",
        "@maven//:software_amazon_awssdk_sts",
    ],
)
